--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid ">
             <!-- <i class="bi bi-battery"></i> -->
-            <img src="\img\5.png" style="width:60px;height: 60px;" alt="Logo">
+            <img src="img\5.png" style="width:60px;height: 60px;" alt="Logo">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -50,13 +50,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img  src="\img\11.jpg" style="  object-fit: cover;" height="400"  class="d-block w-100" alt="Slide 1">
+            <img  src="img\11.jpg" style="  object-fit: cover;" height="400"  class="d-block w-100" alt="Slide 1">
           </div>
           <div class="carousel-item">
-            <img  src="\img\22.jpg"  height="400"  style="  object-fit: cover;"  class="d-block w-100" alt="Slide 2">
+            <img  src="img\22.jpg"  height="400"  style="  object-fit: cover;"  class="d-block w-100" alt="Slide 2">
           </div>
           <div class="carousel-item">
-            <img src="\img\33.jpg" style="  object-fit: cover;"  height="400"  class="d-block w-100" alt="Slide 3">
+            <img src="img\33.jpg" style="  object-fit: cover;"  height="400"  class="d-block w-100" alt="Slide 3">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -99,45 +99,47 @@
         </div>
     </div> -->
 <!-- this is the card part vertical -->
-    <!-- <div class="row row-cols-1 row-cols-md-3 g-4" align="center">
-      <div class="col justify-content-between" >
-        <div class="card h-100" style="width: 300px;">
-          <img src="\img\6.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="#" class="btn btn-primary" style="position: relative;bottom: 0%;">View Profile</a>
+    <div class="d-lg-block d-md-none>
+      <div class="row row-cols-1 row-cols-md-3 g-4" align="center">
+        <div class="col justify-content-between" >
+          <div class="card h-100" style="width: 300px;">
+            <img src="img\6.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="btn btn-primary" style="position: relative;bottom: 0%;">View Profile</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100" style="width: 300px;">
+            <img src="img\7.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a short card.</p>
+              <a href="#" class="btn btn-primary" style="position: relative;bottom: 0%;">View Profile</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100" style="width: 300px;">
+            <img src="img\8.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary" style="position: relative;bottom: 0%;">View Profile</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card h-100" style="width: 300px;">
-          <img src="\img\7.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a short card.</p>
-            <a href="#" class="btn btn-primary" style="position: relative;bottom: 0%;">View Profile</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100" style="width: 300px;">
-          <img src="\img\8.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary" style="position: relative;bottom: 0%;">View Profile</a>
-          </div>
-        </div>
-      </div>
-    </div> -->
+    </div>
 
 <!-- this is the card part horiz -->
 <div class="container1" align="center">
   <div class="card mb-3" style="width: 80%;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="\img\6.png" class="img-fluid rounded-start" alt="...">
+        <img src="img\6.png" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -152,7 +154,7 @@
   <div class="card mb-3" style="width: 80%;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="\img\7.png" class="img-fluid rounded-start" alt="...">
+        <img src="img\7.png" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -167,7 +169,7 @@
   <div class="card mb-3" style="width: 80%;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="\img\8.png" class="img-fluid rounded-start" alt="...">
+        <img src="img\8.png" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -188,7 +190,7 @@
 
     <div class="row" align="center">
         <div class="col-md-4 col-sm-4" > 
-            <img src="\img\a1.jpeg" style="width: 200px; height: 200px"  class="rounded-circle img-thumbnail" alt="">
+            <img src="img\a1.jpeg" style="width: 200px; height: 200px"  class="rounded-circle img-thumbnail" alt="">
           <div class="p-4">
             <p>
               This is X
@@ -196,7 +198,7 @@
           </div>
          </div>
         <div class="col-md-4 col-sm-4"> 
-            <img src="\img\a2.jpeg" style="width: 200px; height: 200px" width="" class="rounded-circle img-thumbnail" alt="">
+            <img src="img\a2.jpeg" style="width: 200px; height: 200px" width="" class="rounded-circle img-thumbnail" alt="">
          <div class="p-4">
             <p>
               This is Y
@@ -205,7 +207,7 @@
   
          </div>
         <div class="col-md-4 col-sm-4"> 
-            <img src="\img\a3.jpeg" style="width: 200px; height: 200px" width="" class="rounded-circle img-thumbnail" alt="">
+            <img src="img\a3.jpeg" style="width: 200px; height: 200px" width="" class="rounded-circle img-thumbnail" alt="">
           <div class="p-4">
             <p>
               This is Z
